--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bundle": "npm run lint && npm run build && npm run i18n && npm run plugin-zip"
   },
   "dependencies": {
-    "immer": "^10.1.1"
+    "immer": "^10.1.1",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "^27.9.0",
